fix footer position on mobile devices

--- a/src/Components/Sections/Contact/CSS/Contact.scss
+++ b/src/Components/Sections/Contact/CSS/Contact.scss
@@ -162,8 +162,4 @@ input[value] {
   textarea:hover {
     transform: translateY(-1.5px) scale(1.005) translateZ(0);
   }
-  .footer {
-    position: absolute;
-    top: 6vmin;
-  }
 }
